Salesforce/objects/agf__ADM_Work_Commitment__c.object
<CustomObject>
    <description>Work items forecast in a sprint</description>
    <fields>
        <fullName>agf__Committed_Story_Points__c</fullName>
        <description>Number of story points assigned to work item when it was forecast in this sprint</description>
        <inlineHelpText>Number of story points assigned to work item when it was committed to in this sprint</inlineHelpText>
        <label>Forecast Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Editor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Editor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Item_Status__c</fullName>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Work Forecast</relationshipLabel>
        <relationshipName>Work_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Work Forecast</relationshipLabel>
        <relationshipName>Work_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Forecast</label>
    <nameField>
        <displayFormat>WC-{0000000}</displayFormat>
        <label>Work Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>